# kbhe-monorepo

./: #auto_saved_files#  .clangd  .cproject  .gitattributes  .gitignore  .gitmodules  75he.kicad_pcb  75he.kicad_pro  75he.kicad_sch  75he.kle.json  CAHIER_DES_CHARGES.md  CMakeLists.txt  CMakePresets.json  RAW_HID.md  README.md  STM32F723VETX_FLASH.ld  STM32F723VETX_RAM.ld  STM32F723XX_FLASH.ld  STM32F723XX_FLASH_APPONLY.ld  TODO.md  adc_key_1_3cycle_12bits_500ns_100nF-10uF_2.txt  adc_key_1_3cycles_12bits_500ns_100nF.csv  adc_key_2_3cycle_12bits_500ns_0F_without_usb_2.csv  adc_key_2_3cycles_12bits_500ns_0F.csv  adc_key_3_3V_3cycle_12bit_500ns.csv  adc_key_5_3cyle_12bits_500ns_without_usb.csv  adc_key_GND_3cycle_12bit_500ns.txt  analysis_data.py  erc.json  eslint.config.js  firmware_updater.py  fp-lib-table  index.html  kbhe.ioc  key_1_ema.txt  keyboard-layout.json  led.kicad_sch  lut_extractor.py  mcu.kicad_sch  mux.kicad_sch  (+13 more)
Docs/: an4661.txt  drv5055-q1.txt  ldl1117.txt  stm32f723ve.txt  tps7a47.txt  usblc6-2-3.txt  ws2812b.txt
analysis/: parse_adc_data.py  regression.py
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
docs/: LED_EFFECTS_CANONICAL_PHASE0.md  RAW_HID_PROTOCOL.MD  README.md  releases.md
firmware/: CMakeLists.txt
kbhe_tool/: cli.py  demo.py  device.py  firmware.py  gui.py  protocol.py  windows_volume.py
legacy/: README.md
production/: netlist.ipc
public/: splashscreen.html
react-kle-modern/: .gitignore  README.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  startup.rs
(+638 files in other folders)
