[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2.8.0"
hidapi = "2.6.4"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_Media_Audio_Endpoints",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
